@@ -1,3 +1,14 @@
+2009-10-11  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	Fixes: NB#134370 - Icon is not shown for the newly added image in the
+	'choose background dialog'.
+
+	* src/hd-change-background-dialog.c
+	  (hd_change_background_dialog_append_backgrounds,
+	  request_thumbnail_for_uri, hd_change_background_dialog_constructed,
+	  add_image_dialog_response): Add support for thumbnail for newly
+	  added image.
+
 2009-10-09  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	Release 0.3.50
